--- a/ms/invasibility-ms.bib
+++ b/ms/invasibility-ms.bib
@@ -29,13 +29,18 @@
   number = {644}
 }
 
-@article{aslanEmployingPlantFunctional,
+@article{aslanEmployingPlantFunctional2019,
+  ids = {aslanEmployingPlantFunctional},
   title = {Employing Plant Functional Groups to Advance Seed Dispersal Ecology and Conservation},
-  author = {Aslan, Clare and Beckman, Noelle and Rogers, Haldre and Bronstein, Judie and Zurell, Damaris and Hartig, Florian and Shea, Katriona and Pejchar, Liba and Neubert, Mike and Poulsen, John and HilleRisLambers, Janneke and Miriti, Maria and Loiselle, Bette and Effiom, Edu and Zambrano, Jenny and Schupp, Geno and Pufal, Gesine and Johnson, Jeremy and Bullock, James and Brodie, Jedediah and Bruna, Emilio and Cantrell, Stephen and Decker, Robin and Fricke, Evan and Gurski, Katie and Hastings, Alan and Kogan, Oleg and Razafindratsima, Onja and Sandor, Manette and Schreiber, Sebastian and Snell, Rebecca and Strickland, Christopher and Zhou, Joy},
+  author = {Aslan, Clare and Beckman, Noelle G. and Rogers, Haldre S. and Bronstein, Judie and Zurell, Damaris and Hartig, Florian and Shea, Katriona and Pejchar, Liba and Neubert, Mike and Poulsen, John and HilleRisLambers, Janneke and Miriti, Maria and Loiselle, Bette and Effiom, Edu and Zambrano, Jenny and Schupp, Geno and Pufal, Gesine and Johnson, Jeremy and Bullock, James M. and Brodie, Jedediah and Bruna, Emilio and Cantrell, Robert Stephen and Decker, Robin and Fricke, Evan and Gurski, Katie and Hastings, Alan and Kogan, Oleg and Razafindratsima, Onja and Sandor, Manette and Schreiber, Sebastian and Snell, Rebecca and Strickland, Christopher and Zhou, Ying},
+  year = {2019},
+  month = mar,
+  volume = {11},
   doi = {10.1093/aobpla/plz006},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Aslan et al_Employing plant functional groups to advance seed dispersal ecology and.pdf;C\:\\Users\\julienv\\Zotero\\storage\\H99DTME2\\5308909.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Aslan et al_Employing plant functional groups to advance seed dispersal ecology and.pdf},
   journal = {AoB PLANTS},
-  language = {en}
+  language = {en},
+  number = {2}
 }
 
 @article{auffretPlantFunctionalConnectivity2017,
@@ -47,7 +52,7 @@
   issn = {1365-2745},
   doi = {10.1111/1365-2745.12742},
   copyright = {\textcopyright{} 2017 The Authors. Journal of Ecology \textcopyright{} 2017 British Ecological Society},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Auffret et al_2017_Plant functional connectivity – integrating landscape structure and effective.pdf;C\:\\Users\\julienv\\Zotero\\storage\\64WA5K5W\\1365-2745.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Auffret et al_2017_Plant functional connectivity – integrating landscape structure and effective.pdf},
   journal = {Journal of Ecology},
   language = {en},
   number = {6}
@@ -76,8 +81,9 @@
   issn = {1365-2699},
   doi = {10.1111/j.1365-2699.2008.01941.x},
   copyright = {\textcopyright{} 2008 University of Oslo. Journal compilation \textcopyright{} 2008 Blackwell Publishing Ltd},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bakkestuen et al_2008_Step-less models for regional environmental variation in Norway.pdf;C\:\\Users\\julienv\\Zotero\\storage\\S6XUELXS\\j.1365-2699.2008.01941.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bakkestuen et al_2008_Step-less models for regional environmental variation in Norway.pdf},
   journal = {Journal of Biogeography},
+  keywords = {SDM},
   language = {en},
   number = {10}
 }
@@ -90,16 +96,15 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Barros et al_2016_Spread rates on fragmented landscapes.pdf},
   isbn = {13669516},
   journal = {Diversity and Distributions},
-  keywords = {invasion}
+  keywords = {dispersal,invasion,landscape}
 }
 
 @phdthesis{berstadEndringarEitVestnorsk2014,
   title = {Endringar i Eit Vestnorsk Kystlandskap Som F{\o}lgje Av Planting Og Naturleg Forynging Av Sitkagran ({{Picea}} Sitchensis): {{Ein}} Landskaps{\o}kologisk Og Metodisk Studie},
   author = {Berstad, {\AA}se-Birgitte and Auestad, Inger and Rydgren, Knut},
   year = {2014},
-  volume = {Master in},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Berstad et al_2014_Endringar i eit vestnorsk kystlandskap som følgje av planting og naturleg.pdf},
-  keywords = {aerial,sitka spruce},
+  keywords = {management,remote sensing,sitka spruce},
   school = {H{\o}gskulen i Sogn og Fjordane}
 }
 
@@ -124,8 +129,7 @@
   year = {2015},
   address = {{Oslo, Norway}},
   institution = {{Norwegian Biodiversity Information Facility}},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bryn_Halvorsen_2015_Veileder for kartlegging av terrestrisk naturvariasjon etter NiN 2.pdf},
-  keywords = {naturtyper}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bryn_Halvorsen_2015_Veileder for kartlegging av terrestrisk naturvariasjon etter NiN 2.pdf}
 }
 
 @article{buckleySlowingPineInvasion2005,
@@ -136,8 +140,9 @@
   pages = {1020--1030},
   issn = {1365-2664},
   doi = {10.1111/j.1365-2664.2005.01100.x},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Buckley et al_2005_Slowing down a pine invasion despite uncertainty in demography and dispersal.pdf;C\:\\Users\\julienv\\Zotero\\storage\\N6DBFNNV\\j.1365-2664.2005.01100.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Buckley et al_2005_Slowing down a pine invasion despite uncertainty in demography and dispersal.pdf},
   journal = {Journal of Applied Ecology},
+  keywords = {demography,invasion,landscape,model performance,uncertainty},
   language = {en},
   number = {6}
 }
@@ -152,8 +157,9 @@
   issn = {1365-2745},
   doi = {10.1111/1365-2745.12890},
   copyright = {\textcopyright{} 2017 The Authors. Journal of Ecology \textcopyright{} 2017 British Ecological Society},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bullock et al_2018_All dispersal functions are wrong, but many are useful.pdf;C\:\\Users\\julienv\\Zotero\\storage\\SWK7W6ZQ\\1365-2745.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bullock et al_2018_All dispersal functions are wrong, but many are useful.pdf},
   journal = {Journal of Ecology},
+  keywords = {dispersal,seeds},
   language = {en},
   number = {3}
 }
@@ -168,6 +174,7 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bullock et al_2006_Measuring plant dispersal.pdf},
   isbn = {1385-0237 1573-5052},
   journal = {Plant Ecology},
+  keywords = {dispersal},
   number = {2}
 }
 
@@ -181,6 +188,7 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bullock et al_2017_A synthesis of empirical plant dispersal kernels.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bullock2017-zapp.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Bullock2017-zcorrection.pdf},
   isbn = {00220477},
   journal = {Journal of Ecology},
+  keywords = {dispersal},
   number = {1}
 }
 
@@ -195,7 +203,8 @@
   issn = {0378-1127},
   doi = {10.1016/j.foreco.2013.05.037},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Calviño-Cancela_Rubido-Bará_2013_Invasive potential of Eucalyptus globulus.pdf;C\:\\Users\\julienv\\Zotero\\storage\\2GTZZN2H\\S0378112713003368.html},
-  journal = {Forest Ecology and Management}
+  journal = {Forest Ecology and Management},
+  keywords = {dispersal,forest,invasibility,invasion,management,plantation,stochasticity}
 }
 
 @article{calvino-cancelaInvasivePotentialEucalyptus2018,
@@ -207,9 +216,9 @@
   pages = {246--258},
   issn = {0378-1127},
   doi = {10.1016/j.foreco.2018.05.001},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Calviño-Cancela_van Etten_2018_Invasive potential of Eucalyptus globulus and Pinus radiata into native.pdf;C\:\\Users\\julienv\\Zotero\\storage\\6E2XUC9C\\S0378112718304973.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Calviño-Cancela_van Etten_2018_Invasive potential of Eucalyptus globulus and Pinus radiata into native.pdf},
   journal = {Forest Ecology and Management},
-  keywords = {plantation}
+  keywords = {forest,invasion,management,plantation}
 }
 
 @article{caplatCrossscaleManagementStrategies2014,
@@ -223,7 +232,7 @@
   doi = {10.1007/s10530-013-0608-7},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Caplat et al_2014_Cross-scale management strategies for optimal control of trees invading from.pdf},
   journal = {Biological Invasions},
-  keywords = {invasion},
+  keywords = {invasion,management,range dynamics},
   language = {en},
   number = {3}
 }
@@ -236,6 +245,7 @@
   pages = {368--377},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Caplat et al_2012_Seed terminal velocity, wind turbulence, and demography drive the spread of an.pdf},
   journal = {Ecology},
+  keywords = {demography,dispersal,invasion},
   number = {2}
 }
 
@@ -250,6 +260,7 @@
   copyright = {\textcopyright{} 2019 The Authors.},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Carr et al_2019_Long-term propagule pressure overwhelms initial community determination of.pdf},
   journal = {Ecosphere},
+  keywords = {community,dispersal,grassland,invasion},
   language = {en},
   number = {8}
 }
@@ -263,8 +274,9 @@
   issn = {1442-9993},
   doi = {10.1111/aec.12426},
   copyright = {\textcopyright{} 2016 Ecological Society of Australia},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Charles et al_2017_Rainforest seed rain into abandoned tropical Australian pasture is dependent on.pdf;C\:\\Users\\julienv\\Zotero\\storage\\2ER4BN9P\\aec.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Charles et al_2017_Rainforest seed rain into abandoned tropical Australian pasture is dependent on.pdf},
   journal = {Austral Ecology},
+  keywords = {dispersal,fragmentation,vegetation},
   language = {en},
   number = {2}
 }
@@ -281,6 +293,7 @@
   doi = {10.1111/1365-2745.12891},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Cousens et al. - 2018 - Why we do not expect dispersal probability density.pdf},
   journal = {Journal of Ecology},
+  keywords = {dispersal},
   language = {en},
   number = {3}
 }
@@ -294,6 +307,7 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Damschen et al_2014_How fragmentation and corridors affect wind dynamics and seed dispersal in open.pdf},
   isbn = {0027-8424},
   journal = {Proceedings of the National Academy of Sciences},
+  keywords = {dispersal,landscape},
   number = {9}
 }
 
@@ -307,6 +321,7 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Dovčiak et al_2008_Seed rain and environmental controls on invasion of Picea abies into grassland.pdf},
   isbn = {1385-0237 1573-5052},
   journal = {Plant Ecology},
+  keywords = {dispersal,invasion},
   number = {1}
 }
 
@@ -320,8 +335,9 @@
   pages = {3--13},
   issn = {0378-1127},
   doi = {10.1016/S0378-1127(00)00498-9},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Engelmark et al_2001_Ecological effects and management aspects of an exotic tree species.pdf;C\:\\Users\\julienv\\Zotero\\storage\\I52M8ITV\\S0378112700004989.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Engelmark et al_2001_Ecological effects and management aspects of an exotic tree species.pdf},
   journal = {Forest Ecology and Management},
+  keywords = {biodiversity,forest,invasion},
   number = {1}
 }
 
@@ -334,8 +350,9 @@
   pages = {91--102},
   issn = {0378-1127},
   doi = {10.1016/j.foreco.2016.07.027},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Fernandes et al_2016_Natural regeneration of Pinus pinaster and Eucalyptus globulus from plantation.pdf;C\:\\Users\\julienv\\Zotero\\storage\\6B8U25IP\\S0378112716303838.html},
-  journal = {Forest Ecology and Management}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Fernandes et al_2016_Natural regeneration of Pinus pinaster and Eucalyptus globulus from plantation.pdf},
+  journal = {Forest Ecology and Management},
+  keywords = {forest,management,plantation,recruitment}
 }
 
 @article{fernandesWhatDrivesEucalyptus2018,
@@ -350,6 +367,7 @@
   doi = {10.1007/s10530-017-1614-y},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Fernandes et al_2018_What drives Eucalyptus globulus natural establishment outside plantations.pdf},
   journal = {Biological Invasions},
+  keywords = {forest,invasion},
   language = {en},
   number = {5}
 }
@@ -358,16 +376,16 @@
   title = {Fremmede Treslag i {{Norske}} Verneomr{\aa}der -- En Kort Kunnskapsoversikt},
   year = {2018},
   institution = {{Sabima Botanisk forening Naturvernforbundet WWF Verdens naturfond}},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\2018_Fremmede treslag i Norske verneområder -- en kort kunnskapsoversikt.pdf}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\2018_Fremmede treslag i Norske verneområder -- en kort kunnskapsoversikt.pdf},
+  keywords = {invasion,management}
 }
 
 @phdthesis{gjengedalLandskapsendringerSomFolge2012,
   title = {Landskapsendringer Som F{\o}lge Av Planting Og Spredning Av Sitkagran: {{En}} Landskaps{\o}kologisk Studie Av Tre Omr{\aa}der i {{Ausrheim}} Og {{Rad{\o}y}} Kommuner 2012},
   author = {Gjengedal, Magnhild and Robertsen, Henriette and Rydgren, Knut and Auestad, Inger},
   year = {2012},
-  volume = {Bachelor i},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Gjengedal et al_2012_Landskapsendringer som følge av planting og spredning av sitkagran.pdf},
-  keywords = {aerial},
+  keywords = {management,remote sensing},
   school = {H{\o}gskulen i Sogn og Fjordane}
 }
 
@@ -381,9 +399,8 @@
   pages = {e0210849},
   issn = {1932-6203},
   doi = {10.1371/journal.pone.0210849},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Gómez et al_2019_Maintaining close canopy cover prevents the invasion of Pinus radiata.pdf;C\:\\Users\\julienv\\Zotero\\storage\\9Z2BXSMF\\article.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Gómez et al_2019_Maintaining close canopy cover prevents the invasion of Pinus radiata.pdf},
   journal = {PLOS ONE},
-  keywords = {canopy cover},
   language = {en},
   number = {5}
 }
@@ -414,6 +431,20 @@
   type = {{{METreport}}}
 }
 
+@article{haakenstadNORA10EIRevisedRegional,
+  title = {{{NORA10EI}}: {{A}} Revised Regional Atmosphere-Wave Hindcast for the {{North Sea}}, the {{Norwegian Sea}} and the {{Barents Sea}}},
+  shorttitle = {{{NORA10EI}}},
+  author = {Haakenstad, Hilde and Breivik, {\O}yvind and Reistad, Magnar and Aarnes, Ole J.},
+  volume = {n/a},
+  issn = {1097-0088},
+  doi = {10.1002/joc.6458},
+  copyright = {\textcopyright{} 2019 The Authors. International Journal of Climatology published by John Wiley \& Sons Ltd on behalf of the Royal Meteorological Society.},
+  journal = {International Journal of Climatology},
+  language = {en},
+  note = {\_eprint: https://rmets.onlinelibrary.wiley.com/doi/pdf/10.1002/joc.6458},
+  number = {n/a}
+}
+
 @techreport{halvorsenNaturNorgeNiN2015,
   title = {Natur i {{Norge}} ({{NiN}}). Versjon 2.0.0.},
   author = {Halvorsen, R and Bryn, A and Erikstad, L and Lindgaard, A},
@@ -421,8 +452,21 @@
   pages = {1--26},
   address = {{Trondheim}},
   institution = {{Norwegian Biodiversity Information Facility}},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Halvorsen et al_2015_Natur i Norge.pdf},
-  keywords = {naturtyper}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Halvorsen et al_2015_Natur i Norge.pdf}
+}
+
+@incollection{harrisSitkaSpruce1990,
+  title = {Sitka Spruce},
+  booktitle = {Silvics of {{North America}}: 1. {{Conifers}}},
+  author = {Harris, A S},
+  editor = {Burns, Russell M and Honkala, Barbara H},
+  year = {1990},
+  volume = {2},
+  pages = {513--529},
+  publisher = {{U.S. Department of Agriculture, Forest Service}},
+  address = {{Washington D.C.}},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Harris_1990_Sitka spruce.pdf},
+  keywords = {forest,sitka spruce}
 }
 
 @article{hewittTreeSeedDispersal2002,
@@ -434,8 +478,9 @@
   pages = {351--363},
   issn = {1365-2699},
   doi = {10.1046/j.1365-2699.2002.00679.x},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Hewitt_Kellman_2002_Tree seed dispersal among forest fragments.pdf;C\:\\Users\\julienv\\Zotero\\storage\\EG36B6LY\\j.1365-2699.2002.00679.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Hewitt_Kellman_2002_Tree seed dispersal among forest fragments.pdf},
   journal = {Journal of Biogeography},
+  keywords = {conservation,forest,fragmentation,metapopulation},
   language = {en},
   number = {3}
 }
@@ -449,8 +494,21 @@
   pages = {1--10},
   issn = {0304-3800},
   doi = {10.1016/j.ecolmodel.2012.04.009},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Horn et al_2012_TurbSeed—A model for wind dispersal of seeds in turbulent currents based on.pdf;C\:\\Users\\julienv\\Zotero\\storage\\XVMIR2U4\\S0304380012001755.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Horn et al_2012_TurbSeed—A model for wind dispersal of seeds in turbulent currents based on.pdf},
   journal = {Ecological Modelling}
+}
+
+@article{jacobsonNaturalRegenerationLodgepole2020,
+  title = {Natural Regeneration of Lodgepole Pine in Boreal {{Sweden}}},
+  author = {Jacobson, Staffan and Hannerz, Mats},
+  year = {2020},
+  month = apr,
+  issn = {1573-1464},
+  doi = {10.1007/s10530-020-02262-0},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Jacobson_Hannerz_2020_Natural regeneration of lodgepole pine in boreal Sweden.pdf},
+  journal = {Biological Invasions},
+  keywords = {conifer,invasibility,invasion,recruitment},
+  language = {en}
 }
 
 @article{joeGeneralizedPoissonDistribution2005,
@@ -464,6 +522,7 @@
   doi = {10.1002/bimj.200410102},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Joe_Zhu_2005_Generalized Poisson Distribution.pdf},
   journal = {Biometrical Journal},
+  keywords = {overdispersion,statistics,zero inflation},
   language = {en},
   number = {2}
 }
@@ -478,6 +537,7 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Jongejans et al_2014_A unifying gravity framework for dispersal.pdf},
   isbn = {1874-1738 1874-1746},
   journal = {Theoretical Ecology},
+  keywords = {dispersal},
   number = {2}
 }
 
@@ -491,8 +551,9 @@
   pages = {617},
   doi = {10.3390/f9100617},
   copyright = {http://creativecommons.org/licenses/by/3.0/},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Kaliniewicz et al_2018_Physical Properties of Seeds of Eleven Spruce Species2.pdf;C\:\\Users\\julienv\\Zotero\\storage\\MJ35R5RA\\617.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Kaliniewicz et al_2018_Physical Properties of Seeds of Eleven Spruce Species2.pdf},
   journal = {Forests},
+  keywords = {forest},
   language = {en},
   number = {10}
 }
@@ -505,8 +566,9 @@
   issn = {1944-8007},
   doi = {10.1029/2011GL050811},
   copyright = {Copyright 2012 by the American Geophysical Union},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul_Poggi_2012_The effects of gentle topographic variation on dispersal kernels of inertial.pdf;C\:\\Users\\julienv\\Zotero\\storage\\37ZPDPRE\\2011GL050811.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul_Poggi_2012_The effects of gentle topographic variation on dispersal kernels of inertial.pdf},
   journal = {Geophysical Research Letters},
+  keywords = {dispersal,experiment,seeds,topography},
   language = {en},
   number = {3}
 }
@@ -519,6 +581,7 @@
   pages = {368--381},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - Mechanistic analytical models for long-distance se.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp1.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp2.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp3.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Katul et al. - 2005 - zapp4.pdf},
   journal = {The American Naturalist},
+  keywords = {dispersal},
   number = {3}
 }
 
@@ -532,8 +595,9 @@
   pages = {131--142},
   issn = {0378-1127},
   doi = {10.1016/S0378-1127(00)00496-5},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Knight et al_2001_A landscape perspective on the establishment of exotic tree plantations.pdf;C\:\\Users\\julienv\\Zotero\\storage\\T8QKQHH5\\S0378112700004965.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Knight et al_2001_A landscape perspective on the establishment of exotic tree plantations.pdf},
   journal = {Forest Ecology and Management},
+  keywords = {dispersal,fragmentation,invasion,landscape,plantation},
   number = {1}
 }
 
@@ -556,8 +620,9 @@
   issn = {1654-109X},
   doi = {10.1111/j.1654-109X.2005.tb00632.x},
   copyright = {2005 IAVS - the International Association of Vegetation Science},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Lavi et al_2005_Invasion of Pinus halepensis from plantations into adjacent natural habitats.pdf;C\:\\Users\\julienv\\Zotero\\storage\\KCK4I4X7\\j.1654-109X.2005.tb00632.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Lavi et al_2005_Invasion of Pinus halepensis from plantations into adjacent natural habitats.pdf},
   journal = {Applied Vegetation Science},
+  keywords = {afforestation,recruitment},
   language = {en},
   number = {1}
 }
@@ -572,8 +637,9 @@
   issn = {1365-2664},
   doi = {10.1111/1365-2664.12366},
   copyright = {\textcopyright{} 2014 The Authors. Journal of Applied Ecology \textcopyright{} 2014 British Ecological Society},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\McConnachie et al_2015_Estimating the effect of plantations on pine invasions in protected areas.pdf;C\:\\Users\\julienv\\Zotero\\storage\\G4VPL3RM\\1365-2664.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\McConnachie et al_2015_Estimating the effect of plantations on pine invasions in protected areas.pdf},
   journal = {Journal of Applied Ecology},
+  keywords = {forest,invasion},
   language = {en},
   number = {1}
 }
@@ -586,7 +652,8 @@
   year = {2012},
   pages = {187--210},
   publisher = {{Oxford University Press Oxford}},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\nathan2012.pdf}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\nathan2012.pdf},
+  keywords = {dispersal}
 }
 
 @misc{NatureTypesNorway2018,
@@ -614,7 +681,7 @@
   pages = {17},
   institution = {{Norsk institutt for skogforskning (NISK)}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Nygaard et al_1999_Naturlig spredning av utenlandske treslag.pdf},
-  keywords = {sitka spruce}
+  keywords = {forest,sitka spruce}
 }
 
 @techreport{olsenKartleggingAvKortdistansespredning2016,
@@ -624,7 +691,7 @@
   address = {{Oslo, Norway}},
   institution = {{NINA}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Olsen et al. - 2016 - Kartlegging av kortdistansespredning av fremmede b.pdf},
-  keywords = {invasion,sitka spruce},
+  keywords = {invasion,management,sitka spruce},
   number = {1231}
 }
 
@@ -646,7 +713,7 @@
   address = {{{\AA}s, Norway}},
   institution = {{Norwegian University of Life Sciences (NMBU)}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Ørka_Hauglin_2016_Use of remote sensing for mapping of non-native conifer species.pdf},
-  keywords = {invasion,sitka spruce},
+  keywords = {invasion,remote sensing,sitka spruce},
   number = {INA fagrapport 33}
 }
 
@@ -658,6 +725,7 @@
   doi = {10.15406/freij.2017.01.00015},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Øyen_Nygaard_2017_The Biomass Potential of Some Selected Native and Non-Native Species for.pdf},
   journal = {Forestry Research and Engineering: International Journal},
+  keywords = {forest},
   number = {3}
 }
 
@@ -668,7 +736,8 @@
   volume = {71},
   pages = {16--26},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Prestø et al_2013_Sembrafuru Pinus cembra invaderer bynært kulturlandskap.pdf},
-  journal = {Blyttia}
+  journal = {Blyttia},
+  keywords = {management}
 }
 
 @article{reistadHighresolutionHindcastWind2011,
@@ -676,13 +745,13 @@
   author = {Reistad, Magnar and Breivik, {\O}yvind and Haakenstad, Hilde and Aarnes, Ole Johan and Furevik, Birgitte R. and Bidlot, Jean-Raymond},
   year = {2011},
   volume = {116},
+  pages = {C05019},
   issn = {2156-2202},
   doi = {10.1029/2010JC006402},
   copyright = {Copyright 2011 by the American Geophysical Union.},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Reistad et al_2011_A high-resolution hindcast of wind and waves for the North Sea, the Norwegian.pdf;C\:\\Users\\julienv\\Zotero\\storage\\DGL79XX2\\2010JC006402.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Reistad et al_2011_A high-resolution hindcast of wind and waves for the North Sea, the Norwegian.pdf},
   journal = {Journal of Geophysical Research: Oceans},
-  language = {en},
-  number = {C5}
+  language = {en}
 }
 
 @article{richardsonConifersInvasiveAliens2004,
@@ -700,9 +769,8 @@
   title = {Spredning Av Sitkagran {{Picea}} Sitchensis P{\aa} {{Stadlandet}}, {{Selje}} Kommune},
   author = {Richter, L M},
   year = {2015},
-  volume = {Bachelor},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Richter_2015_Spredning av sitkagran Picea sitchensis på Stadlandet, Selje kommune.pdf},
-  keywords = {sitka spruce},
+  keywords = {management,sitka spruce},
   school = {H{\o}gskolen i Nord- Tr{\o}ndelag}
 }
 
@@ -716,31 +784,44 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sanchez et al_2011_A field test of inverse modeling of seed dispersal.pdf},
   isbn = {1537-2197 (Electronic) 0002-9122 (Linking)},
   journal = {American Journal of Botany},
-  keywords = {seed dispersal},
+  keywords = {dispersal},
   number = {4},
   pmid = {21613168}
 }
 
-@article{sandstromImpactsDeadWood,
+@article{sandstromImpactsDeadWood2019,
+  ids = {sandstromImpactsDeadWood},
   title = {Impacts of Dead Wood Manipulation on the Biodiversity of Temperate and Boreal Forests. {{A}} Systematic Review},
   author = {Sandstr{\"o}m, Jennie and Bernes, Claes and Junninen, Kaisa and L{\~o}hmus, Asko and Macdonald, Ellen and M{\"u}ller, J{\"o}rg and Jonsson, Bengt Gunnar},
-  volume = {0},
+  year = {2019},
+  volume = {56},
+  pages = {1770--1781},
   issn = {1365-2664},
   doi = {10.1111/1365-2664.13395},
   copyright = {\textcopyright{} 2019 The Authors Journal of Applied Ecology published by John Wiley \& Sons Ltd on behalf of British Ecological Society},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandström et al_Impacts of dead wood manipulation on the biodiversity of temperate and boreal.pdf;C\:\\Users\\julienv\\Zotero\\storage\\3CNTB4VG\\1365-2664.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandström et al_Impacts of dead wood manipulation on the biodiversity of temperate and boreal.pdf},
   journal = {Journal of Applied Ecology},
+  keywords = {biodiversity,forest},
   language = {en},
-  number = {0}
+  number = {7}
+}
+
+@techreport{sandvenKartleggingAvKortdistansespredning2019,
+  title = {Kartlegging Av Kortdistansespredning Av Fremmede Bartr{\ae}r i {{Hordaland}}},
+  author = {Sandven, J and Aamodt, O W and S{\o}rhuus, {\O}},
+  year = {2019},
+  institution = {{NORSKOG}},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandven et al. - 2019 - Kartlegging av kortdistansespredning av fremmede b.pdf},
+  number = {6/2019}
 }
 
 @techreport{sandvikKunnskapsstatusSpredningOg2012,
   title = {Kunnskapsstatus for Spredning Og Effekter Av Fremmede Bartr{\ae}r P{\aa} Biologisk Mangfold},
   author = {Sandvik, H},
   year = {2012},
-  pages = {44},
   institution = {{Direktoratet for naturforvaltning}},
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\DN3.xls;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sandvik_naturforvaltning_2012_Kunnskapsstatus for spredning og effekter av fremmede bartrær på biologisk.pdf},
+  keywords = {invasion,management},
   number = {8-2012},
   type = {{{DN}}-Utredning}
 }
@@ -755,6 +836,7 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Skarpaas_Shea_2007_Dispersal Patterns, Dispersal Mechanisms, and Invasion Wave Speeds for Invasive.pdf;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Skarpaas_Shea_2007_zappendix.pdf},
   isbn = {0003-0147 1537-5323},
   journal = {The American Naturalist},
+  keywords = {dispersal,invasion},
   number = {3}
 }
 
@@ -767,10 +849,30 @@
   issn = {1365-294X},
   doi = {10.1111/j.1365-294X.2011.05203.x},
   copyright = {\textcopyright{} 2011 Blackwell Publishing Ltd},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Steinitz et al_2011_Genetic evidence for a Janzen–Connell recruitment pattern in reproductive.pdf;C\:\\Users\\julienv\\Zotero\\storage\\WAPYMWQ3\\j.1365-294X.2011.05203.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Steinitz et al_2011_Genetic evidence for a Janzen–Connell recruitment pattern in reproductive.pdf},
   journal = {Molecular Ecology},
   language = {en},
   number = {19}
+}
+
+@misc{sullivanLarixDecidua1994,
+  title = {Larix Decidua},
+  author = {Sullivan, Janet},
+  year = {1994},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sullivan - 1994 - Larix decidua.pdf},
+  howpublished = {https://www.fs.fed.us/database/feis/plants/tree/lardec/all.html},
+  journal = {Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory},
+  keywords = {dispersal}
+}
+
+@misc{sullivanPiceaAbies1994,
+  title = {Picea Abies},
+  author = {Sullivan, Janet},
+  year = {1994},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Sullivan - 1994 - Picea abies.pdf},
+  howpublished = {https://www.fs.fed.us/database/feis/plants/tree/picabi/all.html},
+  journal = {Fire Effects Information System, U.S. Department of Agriculture, Forest Service, Rocky Mountain Research Station,  Fire Sciences Laboratory},
+  keywords = {dispersal}
 }
 
 @article{trakhtenbrotMechanisticModelingSeed2014,
@@ -782,8 +884,9 @@
   pages = {29--40},
   issn = {0304-3800},
   doi = {10.1016/j.ecolmodel.2013.11.029},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Trakhtenbrot et al_2014_Mechanistic modeling of seed dispersal by wind over hilly terrain.pdf;C\:\\Users\\julienv\\Zotero\\storage\\798QQ3FR\\S0304380013005772.html},
-  journal = {Ecological Modelling}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Trakhtenbrot et al_2014_Mechanistic modeling of seed dispersal by wind over hilly terrain.pdf},
+  journal = {Ecological Modelling},
+  keywords = {dispersal,fragmentation,landscape,seeds}
 }
 
 @article{vanputtenDistorteddistanceModelsDirectional2012,
@@ -796,6 +899,7 @@
   file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\false;C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\van Putten et al_2012_Distorted-distance models for directional dispersal.pdf},
   isbn = {2041210X},
   journal = {Methods in Ecology and Evolution},
+  keywords = {dispersal},
   number = {4}
 }
 
@@ -809,8 +913,9 @@
   pages = {310--318},
   issn = {0378-1127},
   doi = {10.1016/j.foreco.2014.05.054},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Vespa et al_2014_Functional responses to edge effects.pdf;C\:\\Users\\julienv\\Zotero\\storage\\P89SD84H\\S0378112714003600.html},
-  journal = {Forest Ecology and Management}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Vespa et al_2014_Functional responses to edge effects.pdf},
+  journal = {Forest Ecology and Management},
+  keywords = {dispersal,plantation}
 }
 
 @article{vespaSeedMovementNative2018,
@@ -823,8 +928,9 @@
   pages = {126--133},
   issn = {0378-1127},
   doi = {10.1016/j.foreco.2018.07.051},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Vespa et al_2018_Seed movement between the native forest and monoculture tree plantations in the.pdf;C\:\\Users\\julienv\\Zotero\\storage\\3SSPEWK2\\S0378112718310090.html},
-  journal = {Forest Ecology and Management}
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Vespa et al_2018_Seed movement between the native forest and monoculture tree plantations in the.pdf},
+  journal = {Forest Ecology and Management},
+  keywords = {dispersal,fragmentation,seeds}
 }
 
 @article{wallRelativeContributionsWind2008,
@@ -836,8 +942,9 @@
   issn = {1939-9170},
   doi = {10.1890/07-0409.1},
   copyright = {\textcopyright{} 2008 by the Ecological Society of America},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Wall_2008_On the Relative Contributions of Wind Vs.pdf;C\:\\Users\\julienv\\Zotero\\storage\\F23SB93K\\07-0409.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Wall_2008_On the Relative Contributions of Wind Vs.pdf},
   journal = {Ecology},
+  keywords = {dispersal},
   language = {en},
   number = {7}
 }
@@ -878,7 +985,7 @@
   pages = {652--662},
   issn = {0015-749X},
   doi = {10.5849/forsci.15-048},
-  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Yan et al_2016_Comparison of Spatial Distribution Patterns of Seed Rain between Larch.pdf;C\:\\Users\\julienv\\Zotero\\storage\\3LG4K3GS\\4584066.html},
+  file = {C\:\\Users\\julienv\\Google Drive\\ZoteroLibrary\\Yan et al_2016_Comparison of Spatial Distribution Patterns of Seed Rain between Larch.pdf},
   journal = {Forest Science},
   language = {en},
   number = {6}
